--- a/D2DPlatformer/D2DPlatformer.vcxproj.filters
+++ b/D2DPlatformer/D2DPlatformer.vcxproj.filters
@@ -86,5 +86,8 @@
     <ClInclude Include="Dummy.h">
       <Filter>Objects</Filter>
     </ClInclude>
+    <ClInclude Include="Common.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
